bloodborne log + added a section for favorites

--- a/doqmeat/vgs/games/bloodborne/index.html
+++ b/doqmeat/vgs/games/bloodborne/index.html
@@ -43,6 +43,12 @@
 				background: #e68a5f;
 				color: black;
 			}
+
+			hr {
+				background: none;
+				height: auto;
+				border-bottom: 1px dashed white;
+			}
 		}
 	</style>
 </head>
@@ -50,21 +56,23 @@
 <body>
 
 	<main>
-
 		<h2>bloodborne</h2>
-
-		<div class="info"><b>release date: </b> mar 24, 2015</div>
-		<div class="info"><b>developer: </b> from software</div>
-		<div class="info"><b>genre/type: </b> action adventure, rpg, horror</div>
-		<div class="info"><b>links: </b>
+		<img title="my hunter: blaze" src="fit-charred-hunter.png" width="30%" style="float:left" alt="my hunter wearing the charred hunter fit">
+		<p class="info"><b>release date: </b> mar 24, 2015</div>
+		<p class="info"><b>developer: </b> from software</div>
+		<p class="info"><b>genre/type: </b> action adventure, rpg, horror</div>
+		<p class="info"><b>outlinks: </b>
 			<a href="https://www.bloodborne-wiki.com" target="_blank">bloodborne-wiki</a>,
 			<a title="archive.org pdf" href="https://archive.org/details/bloodborne-collectors-edition-guide/mode/2up" target="_blank">strategy guide</a>,
 			<a title="archive.org pdf" href="https://archive.org/details/artbook-Bloodborne_Official_Artworks/mode/2up" target="_blank">artbook</a>
-		</div>
+			</div>
+		<nav class="info"><b>navigation:</b> <a href="#logs">logs</a><a title="click me to go to the first log!" href="#log1">*</a>, <a href="#favs">favs</a>, <a href="#screenshots">screenshots</a>, <a href="#videos">videos</a></nav>
 		<br>
-		<!-- // have character stats / build here! -->
-		<h3>logs</h3>
-		<!-- talk abt beating logarious, spider with help of a friend, feature plans -->
+		<h3 id="logs">logs</h3>
+		<p><b>24.jun.25</b> the moment arrived. honestly eileen's fight was MUCH harder than i had anticipated. took me a good couple of tries til i could kill her. like i even had to stop fighting her in order to farm vials and bullets which was starting to annoy me a little bit so i said fuck it and asked my girlfriend how to get to the <a href="https://www.youtube.com/watch?v=oRzYb3Xx_HM" target="_blank" class="outlink">infamous cummmfpk chalice dungeon</a> in order to farm echoes for vials and bullets. and my god. does this change everything. but i'm pretty much sticking to using the farmed echoes for shop purchases. because i feel like otherwise it would take away from the challenge of the game if i use it to level up my character. anyway, rest in peace, eileen. you will be missed. she must be one of the hardest hunters you fight in game because WOW.</p>
+		<video src="https://files.catbox.moe/qy42m0.mp4" width="100%" controls="controls">
+		</video>
+		<hr>
 		<p><span class="date">20.jun.25</span> been a while since i've updated this but i'm still making progress! ok so FIRST of all <mark>my latest achievement in this game has been being able to beat <i>martyr logarious</i></mark> because WOW did that get some time to get used to his moves. but once you got that down, the fight gets very very manageable. i think it took me like. 10 times or something like that to beat him. the trick was to do as many viceral attacks as i could since that's what was doing most of the damage to him. also, i did not mean to aurafarm when i activated the fire paper my bad. below i share a clip of the last moments of the boss fight.</p>
 		<video width="100%" controls>
 			<source src="https://files.catbox.moe/a79guy.mp4" type="video/mp4">
@@ -94,7 +102,6 @@
 		<p><span class="date">11.dec.23</span> i don't know why i just thought about this but i think <i>if</i> i a bought a WIRED ps4 controller, i Would Be Able to play bloodborne again..... don't really feel like dropping 20 bucks just for that though. i really like the little messages people place in these games and if i play again i won't have that &lt;/3 so yeah i don't have much desire to buy that controller despite me missing the game! i thought about getting my ps4 fixed that first week it went nuts, but at that point i might as well just wait 5 years or something until i can afford a ps5. ahhhh <img src="/!g/pix/emote1pout.gif"></p>
 		<hr id="6">
 		<p><span class="date">14.sep.23</span><a title="journal log" href="/journal/2023/09#14" target="_blank">no more bloodborne til further notice</a></p>
-
 		<hr id="5">
 		<p><span class="date">04.sep.23</span>soooooooooo you might be wondering what has happened to bloodborne after me playing nonstop for the entirety of july <img src="/!g/pix/catscared.gif"> welp... i wrote about my woes with my ps4 in a <a href="/journal/2023/08#18" target="_blank">journal log</a> if you'd like to read more about it. but basically, the ps4 controller does not want to connect to it due to a faulty bluetooth / wifi antenna. sigh <img src="/!g/pix/catfall.gif"> honestly, i barely play on it nowadays so like if this were the end of my ps4 i'd be like damn... but okay. BUT I STILL NEED TO FINISH BLOODBORNE!!!!!!!!!!!!!! i bought a replacement for the antenna so i'll update this page to let yall know how that went and if my bloodborne journey (ps4 exclusive btw) ends here <img src="/!g/pix/catsob1.gif"> i miss playing it a bit too! so i hope i can get that fixed</p>
 		<p>but to catch up where i last left in the game before my ps4 decided to hate me: i explored a bit more of the cainhurst (? idk if that's how it spelled) castle and found a boss with a VERY cool scythe but oh my god... this one is going to be ROUGH. he's not that fast but he is pretty quick in executing his moveset. and i am very used to my hunter axe but i can tell it's gonna be a bit troublesome to defeat him with the slow weapon that i have.... i gave this boss a try 3 times. i think all those times i got him to half health. which isn't bad. but also the fact that we are fighting on a roof makes things even more stressful because in one of my runs i died CUS I FELL from said roof :[</p>
@@ -123,22 +130,30 @@
 		<p>i unlocked the next area as well, but i think i will keep exploring the forbidden woods, and maybe even that castle i went to a couple of days ago before proceeding to the next area</p>
 
 		<hr>
-		<p><span class="date">08.jul.23</span>been playing bloodborne recently and YEAH its pretty scary (for someone like me) but it is so fun!!!!! i had given this game a try back when it was free for ps+ in 2018 and i did like it but every time i died i felt horrible so i stopped playing it LKFJDLj but since i got ps+ again i decided to give it a try once more. and i think this time it hit me. my girlfriend has also been helping me out giving me tips and tricks throught my journey YAY!<br>i have much more to write about this game but soon i will be publishing an in-depth blog post about bloodborne and my experience with it so please stay tuned for that!
+		<p id="log1"><span class="date">08.jul.23</span>been playing bloodborne recently and YEAH its pretty scary (for someone like me) but it is so fun!!!!! i had given this game a try back when it was free for ps+ in 2018 and i did like it but every time i died i felt horrible so i stopped playing it LKFJDLj but since i got ps+ again i decided to give it a try once more. and i think this time it hit me. my girlfriend has also been helping me out giving me tips and tricks throught my journey YAY!<br>i have much more to write about this game but soon i will be publishing an in-depth blog post about bloodborne and my experience with it so please stay tuned for that!
 
+		<h3 id="favs">favorites</h3>
+		<p><b>weapons:</b> hunter axe, kirkhammer</p>
+		<p><b>outfits:</b></p>
+		<center>
+			<img title="cainhurst armor" src="outfit-cainhurst.png" alt="cainhurst armor" width="30%">
+			<img title="the doll set" src="outfit-doll.png" alt="the doll clothes" width="30%">
+			<img title="knight's set" src="outfit-knight.png" alt="knight's set" width="30%">
+		</center>
 
-
-
-		<h4>misc screenshots</h4>
-		<img title="this is my hunter :3 i was so happy when i found this fit. THE hunter fit" src="myhunter.jpg" width="100%">
-		<img title="me and the bestie" src="meandbestie.jpg" width="100%">
-		<img title="me and the bestie but MATCHING :3" src="WITHBESTIEAGAIN.jpg" width="100%">
-		<img title="me and the 2nd bestie" src="meandnum2bestie.jpg" width="100%">
-		<img title="made me laugh so much" src="alreadydeadbb.jpg" width="100%">
-		<h4>videos</h4>
+		<h4 id="screenshots">misc screenshots</h4>
+		<center>
+			<img title="this is my hunter :3 i was so happy when i found this fit. THE hunter fit" src="myhunter.jpg" width="100%">
+			<img title="me and the bestie" src="meandbestie.jpg" width="100%">
+			<img title="me and the bestie but MATCHING :3" src="WITHBESTIEAGAIN.jpg" width="100%">
+			<img title="me and the 2nd bestie" src="meandnum2bestie.jpg" width="100%">
+			<img title="made me laugh so much" src="alreadydeadbb.jpg" width="60%">
+		</center>
+		<h4 id="videos">misc videos</h4>
 		<video id="video" width="100%" controls>
 			<source src="https://files.catbox.moe/onmg6v.mp4" type="video/mp4">
 		</video>
-		<p>this has been the funniest death i've had since playing this game <sub>[16.jul.23]</sub>
+		<p><sub>[16.jul.23]</sub> - this has been the funniest death i've had since playing this game</p>
 
 
 	</main>
