infinity nikki log

--- a/doqmeat/vgs/games/infinity-nikki/index.html
+++ b/doqmeat/vgs/games/infinity-nikki/index.html
@@ -26,6 +26,11 @@
     <div class="info"><b>genre/type: </b> open world, dress-up game</div>
 
     <h3>logs</h3>
+    <p><span class="date">24.jun.25</span> my outfit of the day :3</p>
+    <img src="250624-OOTD.jpg" alt="blue jacket with a pink mini skirt" width="100%">
+    <p>also want to celebrate this insane pull i got for the fairy dress bc holy shit??? i never expect to get anything from the gacha system of any game so this was very nice.</p>
+    <img src="250624-fairy-dress-pull.jpg" alt="pink fairy dress" width="100%">
+    <hr>
     <p><span class="date">13.jun.25</span> meetup with <a href="https://angelnetcast.com/" target="_blank" class="outlink">angel</a>! the co-op features in infinity nikki are still a little bit wonky but at least i can take my pics.</p>
     <img src="angel (2).jpg" alt="pictures taken with angel" width="100%">
     <img src="angel (1).jpg" alt="pictures taken with angel" width="100%">
