added some more screenshots to infinity nikki

--- a/doqmeat/vgs/games/infinity-nikki/index.html
+++ b/doqmeat/vgs/games/infinity-nikki/index.html
@@ -30,6 +30,10 @@
     <img src="250624-OOTD.jpg" alt="blue jacket with a pink mini skirt" width="100%">
     <p>also want to celebrate this insane pull i got for the fairy dress bc holy shit??? i never expect to get anything from the gacha system of any game so this was very nice.</p>
     <img src="250624-fairy-dress-pull.jpg" alt="pink fairy dress" width="100%">
+    <p>and here's some extra screenshots :p</p>
+    <img src="250624-green (2).jpg" width="100%">
+    <img src="250624-red.jpg" width="100%">
+    <img src="250624-pink.jpg" width="100%">
     <hr>
     <p><span class="date">13.jun.25</span> meetup with <a href="https://angelnetcast.com/" target="_blank" class="outlink">angel</a>! the co-op features in infinity nikki are still a little bit wonky but at least i can take my pics.</p>
     <img src="angel (2).jpg" alt="pictures taken with angel" width="100%">
@@ -42,9 +46,6 @@
     <img src="250613 (4).jpg" alt="infinity nikki screenshot" width="100%">
     <img src="250613 (5).jpg" alt="infinity nikki screenshot" width="100%">
     <p>also, i will probably rework this page to be some sort of album bc i can tell it's going to get very img heavy.</p>
-
-
-
     <hr>
     <p><span class="date">30.may.25</span> some outfits! i met some frog people and they are so cute!</p>
     <img src="blue (1).jpg" alt="infinity nikki screenshots" width="100%">
@@ -58,6 +59,9 @@
     <img src="panda (2).jpg" width="100%" alt="infinity nikki screenshots">
     <img src="panda (3).jpg" width="100%" alt="infinity nikki screenshots">
     <img src="panda (4).jpg" width="100%" alt="infinity nikki screenshots">
+
+    <h3>fav outfits</h3>
+    <center><img src="250624-green (1).jpg" width="50%"></center>
 
 
   </main>
