first light log + fixed some other stuff

--- a/doqmeat/vgs/games/minecraft/index.html
+++ b/doqmeat/vgs/games/minecraft/index.html
@@ -74,16 +74,16 @@
 
 		<details>
 			<summary>
-				<h4>des + hum (my bf <img src="/!g/pix/catheart1.gif">) world</h4>
+				<h4>des + helena (my gf <img src="/!g/pix/catheart1.gif">) world</h4>
 			</summary>
 			<p>a world where me and my girlfriend currently play in!
 			<p>just started playing in this world so i dont have much to say about but i absolutely LOVE the seed that we got i mean this is just perfect. we spawned in a place FULL of flowers. like every corner had flowers
-			<p><img src="des+hum/mc2.jpg" width="100%">
+			<p><img src="des+helena/mc2.jpg" width="100%">
 			<p>and we were also super close to a cherry grove biome! my first time seeing them in game. they are so cute.
-			<p><img src="des+hum/mc3.jpg" width="100%">
+			<p><img src="des+helena/mc3.jpg" width="100%">
 			<p>im currently working on making a path from the village to the top of that mountain. and i plan to make my house on top of said mountain. im super excited tbh i love this seed.
-			<p><img src="des+hum/mc1.jpg" width="100%">
-			<p>meanwhile my bf is yearning for the mines. i followed him once to one of his mining adventures and we ended up in the fucking deep dark. safe to say we did NOT make it out of there alive LOL
+			<p><img src="des+helena/mc1.jpg" width="100%">
+			<p>meanwhile my gf is yearning for the mines. i followed him once to one of his mining adventures and we ended up in the fucking deep dark. safe to say we did NOT make it out of there alive LOL
 			<p><sub>(13.aug.23)</sub>
 				<hr>
 		</details>
