--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -144,6 +144,9 @@ coded with love by des
 		<div class="thumb fav finished vn">
 			<a title="if found..." href="games/if-found/index.html" target="log"><img src="games/if-found/cover.jpg" tabindex="0"></a>
 		</div>
+		<div class="thumb fav finished vn">
+			<a title="infamous first light" href="games/infamous-1st-light/index.html" target="log"><img src="games/infamous-1st-light/cover.jpg" tabindex="0"></a>
+		</div>
 		<div class="thumb finished action">
 			<a title="infamous second son" href="games/infamous-2nd-son/index.html" target="log"><img src="games/infamous-2nd-son/cover.jpg" tabindex="0"></a>
 		</div>
