--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -50,6 +50,7 @@
 		<h2>changelog</h2>
 
 		<div id="log">
+			<li>24.jun.25: log <a href="games/bloodborne/index.html">bloodborne</a> + <a href="games/infinity-nikki/index.html">infinity nikki</a> + new: <a href="games/infamous-1st-light/index.html">infamous first light</a></li>
 			<li>20.jun.25: log <a href="games/bloodborne/index.html">bloodborne</a></li>
 			<li>13.jun.25: log <a href="games/infinity-nikki/index.html">infinity nikki</a></li>
 			<li>01.jun.25: archived my spreadsheet page and added a link to my <a href="https://backloggd.com/u/doqmeat/" target="_blank" class="outlink">backlogged account</a>! it will be my primary way of tracking games from now on. + log: <a href="games/kirby-planet-robobot/index.html">kirby planet robobot</a></li>
