adding a sticky nav to longer logs. i know

--- a/doqmeat/vgs/games/fashion-dreamer/index.html
+++ b/doqmeat/vgs/games/fashion-dreamer/index.html
@@ -32,15 +32,14 @@
 <body>
 	<div id="iframepc">
 		<h1>fashion dreamer</h1>
-		<img src="cover.png" class="cover" width="50%">
+
 		<div class="info"><b>release date: </b> nov 3, 2023</div>
 		<div class="info"><b>developer: </b> Syn Sophia</div>
 		<div class="info"><b>genre/type: </b> simulation, fashion</div>
 		<div class="info"><b>links: </b> <a href="https://www.nintendo.com/store/products/fashion-dreamer-switch/" target="_blank">nintendo switch</a> / <a href="https://na.fashion-dreamer.com/" target="_blank">website</a></div>
+		<nav class="info"><b>navigation: </b><a href="#muses">muses</a>: <small> <a href="#jade">jade</a>, <a href="#ry">ry</a>, <a href="#pandora">pandora</a>, <a href="#csm">chainsaw man charas</a></small> / <a href="#logs">logs</a> / <a href="#gallery">lookit gallery</a>: <small><a href="#for-others">for others</a>, <a href="#for-me">for me</a>, <a href="#mine">my lookits</a>, <a href="#misc">misc</a></small></nav>
 		<div class="info"><b>code:</b> vLX5GBak4r</div>
 
-		<h2>table of contents</h2>
-		<a href="#muses">muses</a>: <small> <a href="#jade">jade</a>, <a href="#ry">ry</a>, <a href="#pandora">pandora</a>, <a href="#csm">chainsaw man charas</a></small> / <a href="#logs">logs</a> / <a href="#gallery">lookit gallery</a>: <small><a href="#for-others">for others</a>, <a href="#for-me">for me</a>, <a href="#mine">my lookits</a>, <a href="#misc">misc</a></small>
 
 		<h2 id="muses">muses</h2>
 		<h3 id="jade">jade</h3>
@@ -138,17 +137,10 @@
 			<img src="1.jpg" width="100%">
 			<img src="4.jpg" width="100%">
 		</div>
-
-
-		<!--<h4>screenshots</h4>
-<img src="" width="100%">
-<img src="" width="100%">
-<img src="" width="100%">
-<img src="" width="100%"> -->
-
 	</div>
 
 	<footer><a href="/">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
+	<script src="../../sticky.js"></script>
 </body>
 
 </html>
