--- a/doqmeat/vgs/games/infamous-1st-light/index.html
+++ b/doqmeat/vgs/games/infamous-1st-light/index.html
@@ -19,6 +19,7 @@
 
   <main>
     <h2>infamous first light</h2>
+    <p class="info"><b>status: </b>finished</p>
     <p class="info"><b>release date: </b> 26 august 2014</p>
     <p class="info"><b>developer: </b> superpunch</p>
     <p class="info"><b>genre/type: </b> action</p>
