--- a/doqmeat/vgs/games/infinity-nikki/index.html
+++ b/doqmeat/vgs/games/infinity-nikki/index.html
@@ -24,8 +24,9 @@
     <div class="info"><b>release date: </b> dec 5, 2024</div>
     <div class="info"><b>developer: </b> papergames</div>
     <div class="info"><b>genre/type: </b> open world, dress-up game</div>
+    <nav class="info"><b>navigation: </b><a href="#logs">logs</a> / <a href="#outfits">fav outfits</a></nav>
 
-    <h3>logs</h3>
+    <h3 id="logs">logs</h3>
     <p><span class="date">24.jun.25</span> my outfit of the day :3</p>
     <img src="250624-OOTD.jpg" alt="blue jacket with a pink mini skirt" width="100%">
     <p>also want to celebrate this insane pull i got for the fairy dress bc holy shit??? i never expect to get anything from the gacha system of any game so this was very nice.</p>
@@ -60,13 +61,14 @@
     <img src="panda (3).jpg" width="100%" alt="infinity nikki screenshots">
     <img src="panda (4).jpg" width="100%" alt="infinity nikki screenshots">
 
-    <h3>fav outfits</h3>
+    <h3 id="outfits">fav outfits</h3>
     <center><img src="250624-green (1).jpg" width="50%"></center>
 
 
   </main>
 
   <footer><a href="/">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
+  <script src="../../sticky.js"></script>
 
 </body>
 
