--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -19,20 +19,12 @@ coded with love by des
 	<!--  end of tooltip shit -->
 	<script src="https://melonking.net/scripts/frame-link.js"></script>
 	<script>
-		titlePrefix = "vgs - ";
+		titlePrefix = "gaming log - ";
 	</script>
 </head>
 
 <body>
 	<div id="infowrapper">
-		<!--stars divider video-->
-		<div id="pagedoll">
-			<img src="/!g/div/balloon.gif">
-		</div>
-		<!--stars divider song-->
-		<div id="pagedoll2">
-			<img src="/!g/div/balloon.gif">
-		</div>
 		<div id="info">
 			<iframe id="mainframe" src="info.html" name="log" height="100%" width="100%" style="border:none;"></iframe>
 		</div>
