--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -67,7 +67,7 @@ finished on 02.mar.25 -->
 		<nav class="box">
 			<h3>personal</h3>
 			<a class="p" href="/about">about</a>
-			<a class="p" href="/photobook">photobook <img src="!g/pix/updated1.gif" alt="page updated"></a>
+			<a class="p" href="/photobook">photobook</a>
 			<a class="p" href="/journal">journal</a>
 			<a class="p" href="/microblog">microblog</a>
 			<a class="p" href="/blog">blog</a>
@@ -79,8 +79,8 @@ finished on 02.mar.25 -->
 
 			<h3>media</h3>
 			<a class="m" href="/music">music</a>
-			<a class="m" href="/vgs">video games</a>
-			<a class="m" href="/tv">tv</a>
+			<a class="m" href="/vgs">video games <img src="!g/pix/updated1.gif" alt="page updated"></a>
+			<a class="m" href="/tv">tv <img src="!g/pix/updated1.gif" alt="page updated"></a>
 			<a class="m" href="/reading">reading</a>
 
 			<h3>misc</h3>
