i do like seeing my hunter on the side of the page actually

--- a/doqmeat/vgs/games/bloodborne/index.html
+++ b/doqmeat/vgs/games/bloodborne/index.html
@@ -61,6 +61,8 @@
 <body>
 	<main class="small_layout">
 		<h2>bloodborne</h2>
+		<nav class="info"><b>navigation:</b> <a href="#logs">logs</a> / <a href="#favs">favs things</a> / <a href="#screenshots">screenshots</a> / <a href="#videos">videos</a></nav>
+		<img title="my hunter: blaze" src="fit-charred-hunter.png" style="float:left" width="28%" alt="">
 		<p class="info"><b>status: </b>not finished</p>
 		<p class="info"><b>release date: </b> mar 24, 2015</div>
 		<p class="info"><b>developer: </b> from software</div>
@@ -70,7 +72,6 @@
 			<a title="archive.org pdf" href="https://archive.org/details/bloodborne-collectors-edition-guide/mode/2up" target="_blank">strategy guide</a>,
 			<a title="archive.org pdf" href="https://archive.org/details/artbook-Bloodborne_Official_Artworks/mode/2up" target="_blank">artbook</a>
 		</p>
-		<nav class="info"><b>navigation:</b> <a href="#logs">logs</a> / <a href="#favs">favs things</a> / <a href="#screenshots">screenshots</a> / <a href="#videos">videos</a></nav>
 		<br>
 		<h3 id="logs">logs</h3>
 		<p><b>24.jun.25</b> the moment arrived. honestly eileen's fight was MUCH harder than i had anticipated. took me a good couple of tries til i could kill her. like i even had to stop fighting her in order to farm vials and bullets which was starting to annoy me a little bit so i said fuck it and asked my girlfriend how to get to the <a href="https://www.youtube.com/watch?v=oRzYb3Xx_HM" target="_blank" class="outlink">infamous cummmfpk chalice dungeon</a> in order to farm echoes for vials and bullets. and my god. does this change everything. but i'm pretty much sticking to using the farmed echoes for shop purchases. because i feel like otherwise it would take away from the challenge of the game if i use it to level up my character. anyway, rest in peace, eileen. you will be missed. she must be one of the hardest hunters you fight in game because WOW.</p>
