--- a/doqmeat/vgs/games/style-savvy-trendsetters/index.html
+++ b/doqmeat/vgs/games/style-savvy-trendsetters/index.html
@@ -26,9 +26,8 @@
 		}
 
 		main,
-		footer,
-		nav.is-pinned {
-			background: #b74056;
+		footer {
+			background: #822e3df0;
 			color: white;
 		}
 
@@ -40,6 +39,10 @@
 		i {
 			padding: 0px 3px;
 			color: black;
+		}
+
+		nav.is-pinned {
+			background: #822e3d;
 		}
 	</style>
 </head>
