--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -3,7 +3,12 @@
 
 <!-- coded by des ✩₊˚.⋆☾⋆⁺₊✧
 working on v5 since 26.jan.25 
-finished on 02.mar.25 -->
+finished on 02.mar.25 
+
+----
+
+btw please don't take my entire code and use it as a base.
+you're free to take whatever you need from my site, but please refrain from taking the entire thing and using it for your own -->
 
 <head>
 	<meta charset="UTF-8">
@@ -13,7 +18,7 @@ finished on 02.mar.25 -->
 	<link href="rss.xml" rel="alternate" type="application/rss+xml" title="doqmeat RSS feed">
 	<link rel="icon" type="image/x-icon" href="/!g/pix/dumy.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="!f/v5/body.css?0613" rel="stylesheet" type="text/css" media="all">
+	<link href="!f/v5/body.css?0628" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
@@ -125,7 +130,7 @@ finished on 02.mar.25 -->
 			<!-- notepad decorations -->
 			<aside id="sticker5" class="deco"><img src="/!g/deco/kittywalk.gif" alt=""></aside>
 			<aside class="deco" id="sticker1"><img src="!f/v5/assets/bike.png" alt=""></aside>
-			<aside id="sticker2" class="deco"><img src="/collection/internet-graphics/!g/borntodie.png" alt=""></aside>
+			<aside id="sticker2" class="deco"><a title="by rice!" href="https://rice.place" target="_blank"><img src="!g/deco/BORNTOCODE.png" alt=""></a></aside>
 			<aside id="sticker6" class="deco"><a href="https://user.xmission.com/~emailbox/graphics.htm" target="_blank"><img title="from catstuff!" src="!f/v5/assets/meowunderstand.gif" alt="banner that reads 'which part of meow don't you understand?'"></a></aside>
 			<aside id="sticker8" class="deco"><a href="https://user.xmission.com/~emailbox/graphics.htm" target="_blank"><img title="from catstuff!" src="!f/v5/assets/benice.gif" alt="banner that reads 'please be nice to me, i love you'"></a></aside>
 			<aside id="sticker9" class="deco"><a title="my siinamota fansite :3" href="https://siinamota.doqmeat.com" target="_blank"><img src="https://siinamota.doqmeat.com/info/!g/buttons/button1%20(4).png" alt="siinamota fansite button"></a></aside>
