commented unfinished section

--- a/doqmeat/music/fav-albums/index.html
+++ b/doqmeat/music/fav-albums/index.html
@@ -50,7 +50,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 		<div id="lp-container">
 
 
-			<div class="filterDiv wish float"><img src=""><button title="11100011" class="btn" onclick="popup('asianglow_11100011')"></button></div>
+			<!-- <div class="filterDiv wish float"><img src=""><button title="11100011" class="btn" onclick="popup('asianglow_11100011')"></button></div>
 			<div id="asianglow_11100011" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -61,7 +61,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 
 					<p><b>links:</b> </p>
 				</div>
-			</div>
+			</div> -->
 
 			<div class="filterDiv wish float"><img src="pics/sepiarecord.jpg"><button title="sepia record" class="btn" onclick="popup('sepiarecord')"></button></div>
 			<div id="sepiarecord" class="modal">
