changed recc form to a youtube playlist + updated kpop prod list

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -79,18 +79,9 @@
       <p><b>25.nov.24</b> - logged <a href="concerts/index.html" target="mainframe">billlie</a>'s concert</p>
     </div>
 
-    <!-- <div id="log" class="box">
-   <h3>latest log...</h3>
-   <iframe src="listening-log/2024/fall.html" height="100%" width="100%" scrolling="no" name="listening-log"></iframe>
-   <a title="click to open listening log and continue reading!" href="listening-log/2024/fall.html" target="_blank"></a>
-  </div> -->
-
     <div id="recc" class="box">
-      <h3>recommend me music!</h3>
-      <form action="https://formspree.io/f/mrbebanw" method="POST" />
-      <textarea id="message" name="message" placeholder="write your message here! could be an album or songs." style="height:100px"></textarea>
-      <input id="submit" type="submit" value="Submit">
-      </form>
+      <h3>main playlist</h3>
+      <iframe width="100%" height="190px" src="https://www.youtube-nocookie.com/embed/videoseries?si=tUGyQsFv2HJjIEGo&amp;list=PLJJj3iCewWn0BKue1qgHWRwNKLoYZBUrv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
     <div id="featured" class="box">
@@ -156,6 +147,14 @@
       <span class="emoji2"></span> <a href="#">top</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a> <span class="emoji2"></span>
     </footer>
     <!-- wrapper end div -->
+
+    <!-- 
+      form template: 
+      
+      <form action="https://formspree.io/f/mrbebanw" method="POST" />
+      <textarea id="message" name="message" placeholder="write your message here! could be an album or songs." style="height:100px"></textarea>
+      <input id="submit" type="submit" value="Submit">
+      </form> -->
   </div>
   <script src="random-mv.js"></script>
 </body>
