--- a/doqmeat/music/kpop-producers.html
+++ b/doqmeat/music/kpop-producers.html
@@ -113,6 +113,7 @@
 		<ul>
 			<li>qwer's <a class="song" href="https://youtu.be/MZ5lkYhm6xQ?si=O3uI82FDeYDMxPi-" target="_blank">discord remix</a></li>
 			<li><a class="song" href="https://youtu.be/5l8VZEyNRH8?si=ALws2w_fV7tVqVw2" target="_blank">lemon melon cookie</a></li>
+			<li><a class="song" href="https://youtu.be/N_vYUNEktsA?si=WC1K93sy6kAME_NQ" target="_blank">dkbk</a></li>
 		</ul>
 
 		<hr>
