--- a/doqmeat/music/cds/index.html
+++ b/doqmeat/music/cds/index.html
@@ -46,7 +46,7 @@
 		 -->
 		<div class="column">
 
-			<div class="cd"><img src="../!g/fav-albums/11100011.jpg" alt="cover for 11100011 by asian glow">
+			<div class="cd"><img src="../fav-albums/pics/11100011.jpg" alt="cover for 11100011 by asian glow">
 				<div class="hov">
 					<div class="caption">
 						<h3>11100011 - asian glow</h3>
