added some infinity nikki screenshots

--- a/doqmeat/vgs/games/infinity-nikki/index.html
+++ b/doqmeat/vgs/games/infinity-nikki/index.html
@@ -24,7 +24,7 @@
     <div class="info"><b>release date: </b> dec 5, 2024</div>
     <div class="info"><b>developer: </b> papergames</div>
     <div class="info"><b>genre/type: </b> open world, dress-up game</div>
-    <nav class="info"><b>navigation: </b><a href="#logs">logs</a> / <a href="#outfits">fav outfits</a></nav>
+    <nav class="info"><b>navigation: </b><a href="#logs">logs</a> / <a href="#screenshots">screenshots</a> / <a href="#outfits">fav outfits</a></nav>
 
     <h3 id="logs">logs</h3>
     <p><span class="date">24.jun.25</span> my outfit of the day :3</p>
@@ -54,15 +54,28 @@
     <img title="honey outfit... the panda is very cute too" src="honey.jpg" alt="infinity nikki screenshots" width="100%">
     <img src="green-pink.jpg" alt="infinity nikki screenshots" width="100%">
     <hr>
-    <p><span class="date">25.may.25</span> dipped my toes into the nikki universe since now i own something that can run it. fuck. once again i am promising to myself and to the world that i will not spend real money on this game. anyways. it looks very cute and it is what it is: a cute and somewhat entertaining game about collecting things. that's honestly good enough for me inbetween my <a href="../bloodborne/index.html">bloodborne</a> breaks. as a sucker for fashion in games, i <em>love</em> the photo and fashion options alike! butfrom the looks of it , i already know the best fits will be behind that gacha system. as always.</p>
+    <p><span class="date">25.may.25</span> dipped my toes into the nikki universe since now i own something that can run it. fuck. once again i am promising to myself and to the world that i will not spend real money on this game. anyways. it looks very cute and it is what it is: a cute and somewhat entertaining game about collecting things. that's honestly good enough for me in between my <a href="../bloodborne/index.html">bloodborne</a> breaks. as a sucker for fashion in games, i <em>love</em> the photo and fashion options alike! but from the looks of it , i already know the best fits will be behind that gacha system. as always.</p>
     <p>anyway. here's some pics with my friend the panda. the other one is me!</p>
     <img src="panda (1).jpg" width="100%" alt="infinity nikki screenshots">
     <img src="panda (2).jpg" width="100%" alt="infinity nikki screenshots">
     <img src="panda (3).jpg" width="100%" alt="infinity nikki screenshots">
     <img src="panda (4).jpg" width="100%" alt="infinity nikki screenshots">
 
+    <h3 id="screenshots">screenshots</h3>
+    <figure>
+      <img src="250630-blue.jpg" alt="posing with a blue elegant dress">
+      <figcaption>got the dress from the <i>butterfly dream</i> resonance! i actually really just want the painter set so i hope i can get that at some point.</figcaption>
+    </figure>
+
     <h3 id="outfits">fav outfits</h3>
-    <center><img src="250624-green (1).jpg" width="50%"></center>
+    <center>
+      <img src="250630-honey.jpg" width="49%" alt="yellow knitted weater with long white socks and brown boots">
+      <img src="250630-evil.jpg" width="49%" alt="grey outfit with a hoodie and miniskirt">
+      <img src="250630-fits (1).jpg" alt="leather jacket with red accents" width="49%">
+      <img src="250630-fits (2).jpg" alt="a green and purple outfit combo. " width="49%">
+      <img src="250624-green (1).jpg" width="49%" alt="white outfit with green accents">
+
+    </center>
 
 
   </main>
