--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -16,7 +16,7 @@
 	<!--  end of tooltip shit -->
 	<style>
 		#wrapper {
-			max-width: 400px;
+			max-width: 500px;
 		}
 
 		a:visited {
@@ -128,7 +128,7 @@
 			<li><a href="https://doqmeat.atabook.org/" target="_blank" class="outlink">guestbook</a></li>
 			<ul>
 				<li><a href="/guestbook/archive1.html">archived 123guestbook</a></li>
-				<li><a href="/guestbook/archive2.html">archived archived site hosted guestbook</a></li>
+				<li><a href="/guestbook/archive2.html">archived google sheets guestbook</a></li>
 			</ul>
 			<li><a href="/notebook" target="_parent">notebook</a></li>
 			<ul>
@@ -196,7 +196,7 @@
 					<a href="/notebook/archive/pages/index.html" target="_parent">archived pages</a>
 				</ul>
 			</ul>
-			<li><b>misc / archived pages</b></li>
+			<li><b>misc</b></li>
 			<ul>
 				<li><a href="/safe-spot/index.html" target="_parent">safe spot</a></li>
 				<li><a href="/webgarden/greenhouse.html" target="_parent">webgarden greenhouse</a></li>
