minor changes to some pages

--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -27,14 +27,14 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 	<div id="wrapper-index">
 
 		<div class="tab">
-			<button id="defaultOpen" class="tablinks link-b" onclick="openTab('link-wrapper')">links</button>
+			<button class="tablinks link-b" onclick="openTab('link-wrapper')">links</button>
 			<button class="tablinks site-b" onclick="openTab('site-wrapper')">sitely</button>
 			<button class="tablinks archive-b" onclick="openTab('archive-wrapper')">archives</button>
 			<button class="tablinks F2U-b" onclick="openTab('F2U-wrapper')">F2U</button>
 		</div>
 
 		<div class="tab2">
-			<button class="tablinks info-b" onclick="openTab('info-wrapper')">info &amp; creds</button>
+			<button id="defaultOpen" class="tablinks info-b" onclick="openTab('info-wrapper')">info &amp; creds</button>
 			<button class="tablinks tut-b" onclick="openTab('tut-wrapper')">tutorials</button>
 		</div>
 
